2001-04-01  Eli Zaretskii  <eliz@is.elta.co.il>

	* go32-nat.c: Minor tweaks, to pacify the ari script.

2001-04-01  Mark Kettenis  <kettenis@gnu.org>

	* i386-tdep.c (i386_extract_struct_value_address): New function.
	* config/i386/tm-i386.h (EXTRACT_STRUCT_VALUE_ADDRESS): Redefine
	in terms of i386_extract_struct_value_address.
	(i386_extract_struct_value_address): New prototype.

	* i386-linux-nat.c (i386_linux_dr_get): Change type of return
	value to `unsigned long'.  Change type of `value' to `unsigned
	long'.
	(i386_linux_dr_set): Change type of second argument to `unsigned
	long'.
	(i386_linux_dr_set_control): Change type of first argument to
	`unsigned long'.
	(i386_linux_dr_get_status): Change type of return value to
	unsigned long.
	* config/i386/nm-linux.h (i386_linux_dr_set_control,
	i386_linux_dr_get_status): Adjust prototypes accordingly. 

2001-03-31  Kevin Buettner  <kevinb@redhat.com>

	* ia64-linux-nat.c (ia64_linux_stopped_by_watchpoint): Change
	TRAP_HWBKPT constant to match that in the kernel headers for
	Linux/IA-64.

2001-03-31  Mark Kettenis  <kettenis@gnu.org>

	* i386bsd-nat.c: Include "gdb_assert.h".
	[HAVE_PT_GETDBREGS] (DBREG_DRX): Define if not
	already defined.
	[HAVE_PT_GETDBREGS] (i386bsd_dr_set, i386bsd_dr_set_control,
	i386bsd_dr_set_addr, i386bsd_dr_reset_addr,
	i386bsd_dr_get_status): New functions.
	* config/i386/nm-fbsd.h [HAVE_PT_GETDBREGS]
	(I386_USE_GENERIC_WATCHPOINTS): Define.
	Include "i386/nm-i386.h".
	(I386_DR_LOW_SET_CONTROL, I386_DR_LOW_SET_ADDR,
	I386_DR_LOW_RESET_ADDR, I386_DR_LOW_GET_STATUS): New macros.
	(i386bsd_dr_set_control, i386bsd_dr_set_addr,
	i386bsd_dr_reset_addr, i386bsd_dr_get_status): New prototypes.
	* acconfig.h (HAVE_PT_GETDBREGS): New configure macro.
	* configure.in: Cleanup a few comments.  Check for PT_GETDBREGS
	ptrace request.
	* config.in, configure: Regenerate.

	* i386-nat.c (i386_insert_aligned_watchpoint): Set address
	register before enabling it by setting the control register.